# ngx-x402

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  nginx.conf  nginx.conf.example  test_stubs.c
client/: .env.example  README.md  package-lock.json  package.json  pay-weather.js
src/: lib.rs
src/config/: mod.rs  validation.rs
src/ngx_module/: config.rs  error.rs  handler.rs  logging.rs  metrics.rs  mod.rs  module.rs  panic_handler.rs  redis.rs  request.rs  requirements.rs  response.rs  runtime.rs
src/ngx_module/commands/: mod.rs
tests/: unit_tests.rs
